--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
     "require": {
         "php": ">=5.3.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.5.*"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "0.1-dev"
