--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         { "name": "Christian Hoegl", "email": "chrigu@sirprize.me" }
     ],
     "autoload": {
-        "psr-4": { "Sirprize\\Queried": "lib/" }
+        "psr-4": { "Sirprize\\Queried\\": "lib/" }
     },
     "require": {
         "php": ">=5.3.2"
