--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "php": ">=5.3.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.1.*"
+        "phpunit/phpunit": "^4.8"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.1.x-dev"
         }
     }
 }
